@@ -154,6 +154,9 @@ No solution, like base.
 No solution
 Reuse var history
 --- 23 jun all ---
+Strong branching for first instance.
+Pscost only for rhs only change after instance 4.
+--- 24 jun all ---
 
 
 
